<resources>
    <string name="app_name">Helping Hand</string>
    <string name="for_mute_click_here">For Mute Click Here</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="mobile_no">Mobile no</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="remail">email</string>
    <string name="rpassword">password</string>
    <string name="rsubmit">submit</string>
    <string name="blusername">Username</string>
    <string name="blpassword">Password</string>
    <string name="brusername">Username</string>
    <string name="bremail">Email</string>
    <string name="brpassword">Password</string>
    <string name="brphone_no">Phone_no</string>
    <string name="title_activity_mute__page">Mute_Page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="write_something_that_you_want_to_speak">write_something_that_you_want_to_speak</string>
    <string name="speakimgbtn">TODO</string>
    <string name="the_number_you_want_tell">The Number You want tell</string>
    <string name="todo3">TODO</string>

    <string name="helllooo">TODO</string>
    <string name="greetingtxt">Greeting</string>
    <string name="good_morningtxt">Good Morning</string>
    <string name="gmgr">TODO</string>
    <string name="good_morning">Good Morning</string>
    <string name="hello">Hello</string>
    <string name="how_are_u">How are u</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>

    <string name="thank_you">Thank you</string>

    <string name="user_choice">User Choice</string>
    <string name="travel_and_places">Travel and Places</string>
    <string name="greetings">Greetings</string>
    <string name="personal_detail">Personal Detail</string>
    <string name="airport">Airport</string>
    <string name="beach">Beach</string>
    <string name="museum">Museum</string>
    <string name="local_taxi">Local taxi</string>
    <string name="muovies">Muovies</string>
    <string name="hotel">Hotel</string>
    <string name="restaurant">Restaurant</string>
    <string name="shopping_centre">Shopping Centre</string>
    <string name="hospital">Hospital</string>
    <string name="subway">Subway</string>
    <string name="image_caption_description">Image Caption/Description</string>
    <string name="uc">TODO</string>
    <string name="image_caption_description1">image_caption_description</string>
    <string name="pdname">Name</string>
    <string name="pdaddress">Address</string>
    <string name="pdnationality">Nationality</string>
    <string name="pdage">Age</string>
    <string name="pdphone_no">Phone_no</string>
    <string name="pdemail">email</string>
    <string name="pdsubmit">Submit</string>
    <string name="pddelete">Delete</string>
    <string name="text_to_be_deleted">Text To Be Deleted</string>
    <string name="deletepd">TODO</string>

    <string-array name="data">
        <item>Select Option</item>
        <item>Name</item>
        <item>Address</item>
        <item>Age</item>
        <item>Nationality</item>
        <item>Email</item>
        <item>Blood Group</item>
        <item>Place</item>
        <item>Phone Number</item>
    </string-array>
    <string name="title_activity_whatsapp">Whatsapp</string>
</resources>
