<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_personal_detail"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/personal_detail" />
        <item
            android:id="@+id/nav_greetings"
            android:icon="@drawable/ic_mood_black_24dp"
            android:title="@string/greetings"
            android:visible="true" />

        <item
            android:id="@+id/nav_tp"
            android:icon="@drawable/ic_directions_walk_black_24dp"
            android:title="@string/travel_and_places"
            android:visible="true" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/user_choice"
            android:visible="true" />
    </group>



</menu>
