<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Save_pd">

    <ImageButton
        android:id="@+id/clear"
        android:layout_width="241dp"
        android:layout_height="84dp"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_account_circle_black_24dp" />


    <EditText
        android:id="@+id/pdname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="587dp"
        android:ems="10"
        android:hint="@string/pdname"
        android:importantForAutofill="no"

        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="97dp"
        tools:targetApi="o" />


    <EditText
        android:id="@+id/pdemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="378dp"
        android:ems="10"
        android:hint="@string/pdemail"
        android:importantForAutofill="no"

        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteY="177dp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/pdphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="521dp"

        android:ems="10"
        android:hint="pdphone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="256dp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/pdage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="298dp"
        android:ems="10"
        android:hint="@string/pdage"

        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="428dp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/pdnationality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="224dp"
        android:ems="10"
        android:hint="@string/pdnationality"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="527dp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/pdaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="448dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/pdaddress"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="332dp"
        tools:targetApi="o" />

    <Button
        android:id="@+id/pdbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="7dp"
        android:text="@string/pdsubmit" />

    <EditText
        android:id="@+id/pdplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="66dp"
        android:ems="10"
        android:hint="Place"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/pdbg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="140dp"
        android:ems="10"
        android:hint="Blood Group"
        android:inputType="textPersonName" />

</RelativeLayout>